# rna-common

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  run_agent_service.sh  run_backend.sh
.cursor/rules/: general.mdc
backend/: .gitignore  README.md  main.py  pyproject.toml  reset_dev_db.py  settings.py  shell.py
backend/resource_based_modules/: __init__.py  crud.py  model_base.py  schema_base.py
backend/resource_based_modules/database/: __init__.py  core.py
backend/resource_based_modules/project/: models.py  schemas.py
backend/server/: __init__.py  http.py  websocket_manager.py  ws.py
backend/steps_project_engine/: Dockerfile  README.md  __init__.py  __main__.py  docker-compose.yaml  manage.py  prompt.py
backend/steps_project_engine/system_instruction/: rules.mdc
backend/tests/: conftest.py
backend/tests/test_server/: test_http.py  test_websocket_manager.py  test_ws.py
backend/tests/test_utils/: test_debug.py  test_misc.py  test_syntax_highlight.py
backend/utils/: apply_patch.py  debug.py  debug_tree_source.py  llm.py  misc.py  reset_media.py  syntax_highlight.py
frontend/: README.md  package-lock.json  package.json
frontend/src/: app.css
frontend/src/lib/components/: CodeEditor.svelte  CodeLine.svelte  FunctionBlock.svelte  StringEditIcon.svelte  StringEditPopover.svelte
frontend/src/lib/components/icons/: ExecutionStepIcons.svelte
frontend/src/lib/components/side-panel/: ExecutionPanel.svelte  HistoryPanel.svelte  SidePanel.svelte
frontend/src/lib/utils/: websocket-manager.js
frontend/src/routes/: +page.svelte
(+1 files in other folders)
