[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Beomsoo Kim",email = "beoms424@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython (>=9.4.0,<10.0.0)",
    "pre-commit (>=4.2.0,<5.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "debugpy (>=1.8.15,<2.0.0)",
    "fastapi (>=0.104.0,<1.0.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "websockets (>=12.0,<13.0)",
    "pydantic (>=2.5.0,<3.0.0)",
    "openai (>=1.99.6,<2.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "PyJWT (>=2.8.0,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "sqlalchemy>=2.0.46",
    "tree-sitter>=0.25.2",
    "tree-sitter-python>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "mypy>=1.17.0",
    "pre-commit>=4.2.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []

[tool.isort]
profile = "black"
known_first_party = ["server_modules", "steps_project_engine", "utils"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
